tdf#126137: Do not dereference non-existing Object

Regression from dfefe448c41921f2f1e54d3f69b8b9e89031d055

Use same logic as in c28ec6d9fbb21b363102faac0171de2754ea5d75

Change-Id: Ia489eb61873d38c31729fedb853b11570e562123